# PassMan

./: .gitignore  MANIFEST.in  README.md  README.rst  com.programmabel.PassMan.desktop  main.py  passman  passman.py  pyproject.toml  requirements.txt  setup.py  window.glade
PassMan/: LICENSE
PassMan/src/PassMan/: __main__.py  app.py
docs/: index.md
src/PassMan/: app.py
src/PassMan.dist-info/: METADATA
src/PassMan/resources/: PassMan.icns
